updated app structure, built first question

--- a/index.html
+++ b/index.html
@@ -3,26 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leave Simulation</title>
-    <base href="/">
+    <title>Simulador de Licença Parental</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Signika+Negative:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Leave Simulation</h1>
-    <label for="baby-birth-date">Enter Baby's Birth Date:</label>
-    <input type="date" id="baby-birth-date" />
-
-    <h2>Leave Details</h2>
-    <p id="moms-leave-details"></p>
-    <p id="dads-leave-details"></p>
-    <p id="moms-start-dates"></p>
-    <p id="moms-end-dates"></p>
-    <p id="dads-start-dates"></p>
-    <p id="dads-end-dates"></p>
-
-    <h2>Calendar</h2>
-    <div id="calendar"></div>
-    
-    <script type="module" src="leave.js"></script>
-    <script type="module" src="script.js"></script>
+    <div id="app">
+        <!-- JavaScript will populate content here -->
+    </div>
+    <script src="js/app.js" type="module"></script>
 </body>
 </html>
