added help section, separated other sections for easier construction

--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <div id="app">
             <!-- JavaScript will populate content here -->
     </div>
+
+    <!-- Help Button -->
+    <button id="helpBtn" class="help-btn">Ajuda</button>
+
+    <!-- Help Box -->
+    <div id="helpBox" class="hidden">
+        <span id="closeHelp" class="close-btn">&times;</span>
+        <div class="help-content" id="help-content-sp">
+            <!-- JavaScript will populate content here -->
+        </div>
+    </div>
+
+    <script src="js/help.js"></script>
     <script src="js/app.js" type="module"></script>
 </body>
 </html>
