added return button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             <!-- JavaScript will populate content here -->
     </div>
 
+    <!-- Return Button -->
+    <button id="return-btn" class="return-button">&#8592;</button>
+
     <!-- Help Button -->
     <button id="helpBtn" class="help-btn">Ajuda</button>
 
