--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    <script src="js/help.js"></script>
+    <script src="components/help.js"></script>
     <script src="js/app.js" type="module"></script>
 </body>
 </html>
