--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Simulador de Licença Parental</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Signika+Negative:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
 </head>
 <body>
     <div id="app">
