--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,6 @@
 
     <!-- Help Button -->
     <button id="helpBtn" class="help-btn">Ajuda</button>
-
     <!-- Help Box -->
     <div id="helpBox" class="hidden">
         <span id="closeHelp" class="close-btn">&times;</span>
